test/corpus/multiple_declarations.txt
=========================================================
Multiple declarations of variables(operation, expression)
=========================================================

a = 3;
b = 3 * a;
c = a + 3 * b;

---

(source_file
  (expression (identifier) (factor (number)))
  (expression (identifier) (operation (factor (number)) (factor (identifier))))
  (expression (identifier) (operation (factor (identifier)) (factor (operation (factor (number)) (factor (identifier))))))
)

==========================
Vector declarations Rotate
==========================

a = [1 2 3;1, 2, 3]';
a = [1 2 3;1, 2, 3]';

---

(source_file
  (expression (identifier) (vector_definition (factor (number)) (factor (number)) (factor (number)) (factor (number)) (factor (number)) (factor (number)) ))
  (expression (identifier) (vector_definition (factor (number)) (factor (number)) (factor (number)) (factor (number)) (factor (number)) (factor (number)) ))
)

